added main content

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     </header>
     <nav class="nav-menu">
       <ul>
-        <li><a href="#">Main</a></li>
-        <li><a href="#">Catalog</a></li>
-        <li><a href="#">Shipping and payment</a></li>
-        <li><a href="#">Price list</a></li>
-        <li><a href="#">Contacts</a></li>
+        <li><a id="main-ref" href="#">Main</a></li>
+        <li><a id="catalog-ref" href="#">Catalog</a></li>
+        <li><a id="shipping-ref" href="#">Shipping and payment</a></li>
+        <li><a id="pricelist-ref" href="#">Price list</a></li>
+        <li><a id="contact-ref" href="#">Contacts</a></li>
       </ul>
     </nav>
     <section class="slider">
@@ -58,9 +58,120 @@
       </div>
     </section>
     <main class="content">
-      <div class="navbar"></div>
-      <div class="leftblock"></div>
-      <div class="centerblock"></div>
+      <div class="navbar">
+        <ul>
+          <li><a id="main-ref" href="#">Main</a> /</li>
+          <li><a id="catalog-ref" href="#">Catalog</a> /</li>
+          <li><a id="shipping-ref" href="#">Shipping and payment</a> /</li>
+          <li><a id="pricelist-ref" href="#">Price list</a> /</li>
+          <li><a id="contact-ref" href="#">Contacts</a></li>
+        </ul>
+      </div>
+      <div class="main-content">
+        <div class="leftblock">
+          <ul class="first-list">
+            <li><a href="#">Bread</a></li>
+            <li>
+              <a href="#">Puff Pastry</a>
+              <ul class="inner-list">
+                <li><a href="#">Croissants</a></li>
+                <li><a href="#">Cronuts</a></li>
+                <li><a href="#">Cube Croissants</a></li>
+              </ul>
+            </li>
+            <li><a href="#" style="text-decoration: underline">Cakes</a></li>
+            <li><a href="#">Cheesecakes</a></li>
+            <li><a href="#">Doughnuts</a></li>
+          </ul>
+        </div>
+        <div class="centerblock">
+          <div class="catalog">
+            <div class="product-card">
+              <img
+                src="https://i.pinimg.com/736x/5e/0d/42/5e0d428c2487a0eb29c26ae90ffd2574.jpg"
+                alt="rose-cake"
+              />
+              <h3 class="cake-title">Blossom Bliss Cake</h3>
+              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+            </div>
+            <div class="product-card">
+              <img
+                src="https://preview.redd.it/where-to-buy-aesthetic-cakes-in-ph-v0-8ihpme8hljha1.jpg?width=720&format=pjpg&auto=webp&s=849f9a29c3554d594f337a292f7fe2b6256d101c"
+                alt="rose-cake"
+              />
+              <h3 class="cake-title">Floral Fantasy Cake</h3>
+              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+            </div>
+            <div class="product-card">
+              <img
+                src="https://i.pinimg.com/originals/09/b2/62/09b262a4698248f1b18ac9010960ac46.jpg"
+                alt="flowers-cake"
+              />
+              <h3 class="cake-title">Garden Elegance Cake</h3>
+              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+            </div>
+            <div class="product-card">
+              <img
+                src="https://i.pinimg.com/1200x/a8/e1/82/a8e1824d817bc5325ea6fcb2dda3fcc9.jpg"
+                alt="birthday-cake"
+              />
+              <h3 class="cake-title">Petal Perfection Cake</h3>
+              <h2 class="cake-price"><span class="pounds">£39</span>.99</h2>
+            </div>
+            <div class="product-card">
+              <img
+                src="https://i.pinimg.com/736x/6f/82/9f/6f829fcf94ecaf5deaad2fe6b3ff316e.jpg"
+                alt="birthday-cake"
+              />
+              <h3 class="cake-title">Bloom Delight Cake</h3>
+              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+            </div>
+            <div class="product-card">
+              <img
+                src="https://i.pinimg.com/736x/52/51/e8/5251e8fa9fa7daae25abb9cb2e1c5cdf.jpg"
+                alt="birthday-cake"
+              />
+              <h3 class="cake-title">Rose Radiance Cake</h3>
+              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+            </div>
+          </div>
+          <div class="pagination">
+            <ul class="pagination-list">
+              <li class="chosen">1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li>5</li>
+            </ul>
+          </div>
+          <div class="bakery-story">
+            <div>
+              Welcome to Viator's Bakery, where every bite tells a story of
+              passion and craftsmanship. Nestled in the heart of our bustling
+              town, our bakery has been serving up delectable treats for over
+              three decades. From our humble beginnings as a family-owned
+              establishment to becoming a beloved community staple, we take
+              pride in creating mouthwatering pastries, bread, and cakes that
+              delight our customers' senses.
+            </div>
+            <div>
+              At Viator's Bakery, we believe in preserving tradition while
+              embracing innovation. Our recipes, handed down through
+              generations, are infused with love and care, ensuring that each
+              bite is a nostalgic journey for our patrons. From our signature
+              buttery croissants to our heavenly cakes adorned with intricate
+              designs, every creation is a testament to our commitment to
+              quality and excellence.Step into our bakery and experience the
+              warmth of our inviting ambiance, the aroma of freshly baked goods
+              wafting through the air, and the friendly smiles of our dedicated
+              staff. Whether you're indulging in a morning pastry or celebrating
+              a special occasion with one of our custom cakes, we invite you to
+              savor the Viator's Bakery experience, where every moment is
+              sweetened with joy.
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <div class="copyright">
@@ -69,11 +180,11 @@
       </div>
       <div class="menu-bar">
         <ul>
-          <li><a href="#">Main</a></li>
-          <li><a href="#">Catalog</a></li>
-          <li><a href="#">Shipping and payment</a></li>
-          <li><a href="#">Price list</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a id="main-ref" href="#">Main</a></li>
+          <li><a id="catalog-ref" href="#">Catalog</a></li>
+          <li><a id="shipping-ref" href="#">Shipping and payment</a></li>
+          <li><a id="pricelist-ref" href="#">Price list</a></li>
+          <li><a id="contact-ref" href="#">Contacts</a></li>
         </ul>
       </div>
       <div class="info">
@@ -92,18 +203,13 @@
         <h2>Feedback</h2>
         <form class="form">
           <label for="name">Your Name <span class="red">*</span></label>
-          <input class="form-input name" type="text" id="name" required />
+          <input class="form-input name" type="text" id="name" />
           <label for="phone-number"
             >Phone Number <span class="red">*</span></label
           >
-          <input
-            class="form-input phone-number"
-            type="tel"
-            id="phone-number"
-            required
-          />
+          <input class="form-input phone-number" type="tel" id="phone-number" />
           <label for="email">Email <span class="red">*</span></label>
-          <input class="form-input email" type="email" id="email" required />
+          <input class="form-input email" type="email" id="email" />
           <label for="report">Report</label>
           <textarea
             class="form-textarea"
