finished website development

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     </header>
     <nav class="nav-menu">
       <ul>
-        <li><a id="main-ref" href="#">Main</a></li>
+        <li><a class="chosen" id="main-ref" href="#">Main</a></li>
         <li><a id="catalog-ref" href="#">Catalog</a></li>
         <li><a id="shipping-ref" href="#">Shipping and payment</a></li>
         <li><a id="pricelist-ref" href="#">Price list</a></li>
-        <li><a id="contact-ref" href="#">Contacts</a></li>
+        <li><a id="contacts-ref" href="#">Contacts</a></li>
       </ul>
     </nav>
     <section class="slider">
@@ -57,16 +57,7 @@
         <i class="fa-solid fa-arrow-right" id="right-arrow"></i>
       </div>
     </section>
-    <main class="content">
-      <div class="navbar">
-        <ul>
-          <li><a id="main-ref" href="#">Main</a> /</li>
-          <li><a id="catalog-ref" href="#">Catalog</a> /</li>
-          <li><a id="shipping-ref" href="#">Shipping and payment</a> /</li>
-          <li><a id="pricelist-ref" href="#">Price list</a> /</li>
-          <li><a id="contact-ref" href="#">Contacts</a></li>
-        </ul>
-      </div>
+    <main class="main">
       <div class="main-content">
         <div class="leftblock">
           <ul class="first-list">
@@ -79,7 +70,7 @@
                 <li><a href="#">Cube Croissants</a></li>
               </ul>
             </li>
-            <li><a href="#" style="text-decoration: underline">Cakes</a></li>
+            <li><a class="chosen" href="#">Cakes</a></li>
             <li><a href="#">Cheesecakes</a></li>
             <li><a href="#">Doughnuts</a></li>
           </ul>
@@ -92,7 +83,10 @@
                 alt="rose-cake"
               />
               <h3 class="cake-title">Blossom Bliss Cake</h3>
-              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+              <h2 class="cake-price">
+                <span class="pounds">£43</span>.99
+                <i class="fa-solid fa-cart-shopping icon"></i>
+              </h2>
             </div>
             <div class="product-card">
               <img
@@ -100,7 +94,10 @@
                 alt="rose-cake"
               />
               <h3 class="cake-title">Floral Fantasy Cake</h3>
-              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+              <h2 class="cake-price">
+                <span class="pounds">£43</span>.99
+                <i class="fa-solid fa-cart-shopping icon"></i>
+              </h2>
             </div>
             <div class="product-card">
               <img
@@ -108,7 +105,10 @@
                 alt="flowers-cake"
               />
               <h3 class="cake-title">Garden Elegance Cake</h3>
-              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+              <h2 class="cake-price">
+                <span class="pounds">£43</span>.99
+                <i class="fa-solid fa-cart-shopping icon"></i>
+              </h2>
             </div>
             <div class="product-card">
               <img
@@ -116,7 +116,10 @@
                 alt="birthday-cake"
               />
               <h3 class="cake-title">Petal Perfection Cake</h3>
-              <h2 class="cake-price"><span class="pounds">£39</span>.99</h2>
+              <h2 class="cake-price">
+                <span class="pounds">£39</span>.99
+                <i class="fa-solid fa-cart-shopping icon"></i>
+              </h2>
             </div>
             <div class="product-card">
               <img
@@ -124,7 +127,10 @@
                 alt="birthday-cake"
               />
               <h3 class="cake-title">Bloom Delight Cake</h3>
-              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+              <h2 class="cake-price">
+                <span class="pounds">£43</span>.99
+                <i class="fa-solid fa-cart-shopping icon"></i>
+              </h2>
             </div>
             <div class="product-card">
               <img
@@ -132,7 +138,10 @@
                 alt="birthday-cake"
               />
               <h3 class="cake-title">Rose Radiance Cake</h3>
-              <h2 class="cake-price"><span class="pounds">£43</span>.99</h2>
+              <h2 class="cake-price">
+                <span class="pounds">£43</span>.99
+                <i class="fa-solid fa-cart-shopping icon"></i>
+              </h2>
             </div>
           </div>
           <div class="pagination">
@@ -184,7 +193,7 @@
           <li><a id="catalog-ref" href="#">Catalog</a></li>
           <li><a id="shipping-ref" href="#">Shipping and payment</a></li>
           <li><a id="pricelist-ref" href="#">Price list</a></li>
-          <li><a id="contact-ref" href="#">Contacts</a></li>
+          <li><a id="contacts-ref" href="#">Contacts</a></li>
         </ul>
       </div>
       <div class="info">
